--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,10 @@ body {
 a {
   color: #00B7FF;
 }
+h1 {
+  text-align: center;
+  margin-right: 1%;
+  margin-top: 0%;
+  font-weight: normal;
+  font-size: 45px;
+}
