--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Notes
+
+  <input id="text1">
+  br
+  br
+  <button id = "btn1">Spara</button>
+  br
+  br
+  <button id = "btn1">Återblick</button>
