--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
   <input id="text1">
   br
   br
-  <button id = "btn1">Spara</button>
+  <button id = "button">Spara</button>
   br
   br
-  <button id = "btn1">Återblick</button>
+  <button id = "button1">Återblick</button>
