--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,8 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center;
+  background-color: #dbdbdb;
 }
 
 a {
@@ -11,5 +13,33 @@ h1 {
   margin-right: 1%;
   margin-top: 0%;
   font-weight: normal;
-  font-size: 45px;
+  font-size: 100px;
+  font-weight: bold;
+}
+input {
+  padding: 70px 100px 50px 50px;
+  width: 500px;
+  height: 200px;
+  box-shadow: 0.5px 0.5px 0.5px 0.5px
+}
+#button {
+  background-color: #cc1d1d;
+  color: white;
+  padding: 20px 70px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 15px;
+}
+
+#button1 {
+  background-color: #cc1d1d;
+  color: white;
+  padding: 20px 70px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 15px;
 }
