--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
   <input id="text1">
   br
   br
-  <button id = "button">Spara</button>
+  input(type="submit", value="Spara", id="addButton")
   br
   br
-  <button id = "button1">Återblick</button>
+  a(href= "/summary", id= "button1") Återblick
