--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,31 +16,37 @@ h1 {
   font-size: 100px;
   font-weight: bold;
 }
-#text1 {
+#title {
   padding: 70px 100px 50px 50px;
   font-size: 3vw;
-  width: 500px;
-  height: 200px;
   box-shadow: 0.5px 0.5px 0.5px 0.5px
+}
+  #description {
+    padding: 70px 100px 50px 50px;
+    font-size: 3vw;
+    width: 500px;
+    height: 200px;
+    box-shadow: 0.5px 0.5px 0.5px 0.5px
 }
 #addButton {
   background-color: #cc1d1d;
   color: white;
-  padding: 20px 70px;
+  padding: 30px 130px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
   border-radius: 15px;
+  font-size: 2vw;
 }
 
 #button1 {
   background-color: #cc1d1d;
   color: white;
-  padding: 20px 70px;
+  padding: 30px 120px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   border-radius: 15px;
+  font-size: 2vw;
 }
