added functional summary of notes with title, description and date created

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ block content
     br
     textarea(type="text", id="description", placeholder="...")
     
-  p(type="submit", id="addButton", value="Spara",)
+  p(type="submit", id="addButton",) Spara
   br
   br
   a(href= "/summary", id= "button1") Återblick
