--- a/views/summary.pug
+++ b/views/summary.pug
@@ -4,3 +4,7 @@ block content
   h1 Under construction
 
   a(href= "/", id= "button1") Tillbaka
+
+  script(src="/javascripts/summary.js")
+  ul#utgifter
+  
