quality of life changes and made css for summary.js

--- a/views/summary.pug
+++ b/views/summary.pug
@@ -1,9 +1,13 @@
 extends layout
 
 block content
-  h1 Under construction
+  h1 Återblick
 
-  a(href= "/", id= "button1") Tillbaka
+  a(href= "/", id= "button1") Tillbaka)
+  br
+  br
+  br
+  br
 
   script(src="/javascripts/summary.js")
   ul#utgifter
