--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,7 +46,45 @@ h1 {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
   border-radius: 15px;
   font-size: 2vw;
+}
+
+#NotesTitle {
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 8vw;
+  font-weight: bold;
+}
+
+#NotesDescription {
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 5vw;
+}
+
+#notesListDate {
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 3vw;
+  float: left;
+}
+
+#notesList {
+  float: left;
+  background-color: #fff;
+  margin-bottom: 10%;
+  width:80%;
+  height: 100%;
+  padding: 0% 8% 5% 8%;
+  border:none;
+  box-shadow: 0.5px 0.5px 2.5px grey;
+  border-radius: 30px;
+  position: static;
 }
