ready for heroku

--- a/views/summary.pug
+++ b/views/summary.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1 Återblick
 
-  a(href= "/", id= "button1") Tillbaka)
+  a(href= "/", id= "button1") Tillbaka
   br
   br
   br
